--- a/style.css
+++ b/style.css
@@ -81,12 +81,15 @@ input {
 	gap: 1rem;
 }
 
-.profile-toolbar-image {
-  	background-image: url(/assets/profile-picture.jpg);
+.profile-image {
 	width: 50px;
 	height: 50px;
 	background-size: cover;
 	border-radius: 50%;
+}
+
+.profile-image-own {
+	background-image: url(/assets/profile-picture.jpg);
 }
 
 .interactable-icon {
@@ -138,6 +141,7 @@ input {
 	width: 6rem;
 	height: 2rem;
 	font-weight: bold;
+	cursor: pointer;
 }
 
 .sidebar {
@@ -190,10 +194,12 @@ main {
 	grid-area: content;
 	background-color: var(--light-gray);
 	display: grid;
+	gap: 1rem;
 	grid-template: 1fr / 2fr 1fr;
 	grid-template-areas: "main aside";
 	font-weight: bolder;
 	font-size: 1.3rem;
+	padding: 1rem;
 }
 
 section {
@@ -208,10 +214,12 @@ section {
 
 .projects-grid {
 	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	gap: 1rem;
 }
 
 .project-panel {
-	border: 1px solid;
+	border: none;
 	border-radius: 8px;
 	display: flex;
 	gap: 1rem;
@@ -227,11 +235,18 @@ section {
 
 .project-panel-content {
 	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.project-panel-title {
+	font-size: 1.1rem;
 }
 
 .project-panel-text {
 	font-weight: lighter;
-	font-size: 1rem;
+	font-size: 0.9rem;
 	color: var(--darker-contrast-gray)
 }
 
@@ -246,8 +261,81 @@ section {
 aside {
 	grid-area: aside;
 	display: grid;
+	gap: 0.5rem;
 	grid-template: auto 1fr auto 1fr / 1fr;
 	grid-template-areas:
 		"heading"
-		"asside-content"
+		"aside-content"
+}
+
+.announcements-panel {
+	border: none;
+	border-radius: 8px;
+	background-color: var(--neutral-white);
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between
+}
+
+.announcement-panel-title {
+	font-size: 1rem;
+}
+
+.announcement-panel-text {
+	font-weight: lighter;
+	font-size: 0.9rem;
+	color: var(--darker-contrast-gray)
+}
+
+.panel-separator {
+	width: 100%;
+	height: 1px;
+	border-bottom: 2px solid var(--transparent-contrast-gray);
+}
+
+.trending-container-panel {
+	border: none;
+	border-radius: 8px;
+	background-color: var(--neutral-white);
+	padding: 1rem;
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.trending-panel {
+	font-size: 0.9rem;
+	display: grid;
+	align-items: center;
+	column-gap: 1rem;
+	grid-template-columns: 50px 1fr;
+	grid-template-rows: repeat(2, 25px);
+	grid-template-areas:
+		"image name-tag"
+		"image comment"
+}
+
+.trending-panel-image {
+	grid-area: image;
+}
+
+.trending-panel-name-tag {
+	grid-area: name-tag;
+}
+
+.trending-panel-comment {
+	grid-area: comment;
+	color: var(--darker-contrast-gray);
+}
+
+.avatar-image1 {
+	background-image: url(/assets/avatar1.svg);
+}
+
+.avatar-image2 {
+	background-image: url(/assets/avatar2.svg);
+}
+
+.avatar-image3 {
+	background-image: url(/assets/avatar3.svg);
 }
